--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,18 @@
     padding: 0;
     margin: 0;
 }
+
+.container{
+    max-width: 1000px;
+    margin: auto;
+}
+
+.item{
+    max-height: 600px;
+}
+.item img{
+    margin-top: 100px;
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
