--- a/css/style.css
+++ b/css/style.css
@@ -2,19 +2,67 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 .container{
     max-width: 1000px;
     margin: auto;
+    margin-top: 100px;
+    
 }
 
 .item{
-    max-height: 600px;
+   display: none;
+    
+}
+
+.active{
+    display: block;
 }
 .item img{
-    margin-top: 100px;
+    
     width: 100%;
     height: 400px;
     object-fit: cover;
+    position: relative;
+    display: block;
+    
+    
 }
+
+.img-text{
+    position: absolute;
+    bottom: 0;
+    color: white;
+    text-align: right;
+    right: 0;
+    padding-right: 10px;
+    padding-bottom: 40px;
+}
+
+.items{
+    position: relative;
+}
+#prev{
+    position: absolute;
+    background-color: lightgrey;
+    top: 0;
+    left: 50%;
+    cursor: pointer;
+    padding: 5px;
+    
+    z-index: 999;
+}
+
+#next{
+    position: absolute;
+    background-color: lightgrey;
+    bottom: 0;
+    left: 50%;
+    cursor: pointer;
+    padding: 5px;
+    
+    z-index: 999;
+}
+
